Selected element in the Inspector panel isn't visible #37 - fixed background-color for selected lines

--- a/chrome/skin/classic/shared/markup-view.css
+++ b/chrome/skin/classic/shared/markup-view.css
@@ -32,3 +32,7 @@
   background-size: 11px 11px;
   background-position: 0 1px;
 }
+
+.theme-firebug .theme-selected {
+  background-color: #3399ff;
+}
